# MutsukiStdPlugins

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: performance-smoke.yml  platform-compat.yml
artifacts/performance/issue6/: effect-derive-bench.txt
artifacts/performance/reference-windows-x64/: report-analysis.json  report.approval.json  report.json
benchmarks/: workloads-v1.json
crates/mutsuki-std-benchmarks/: Cargo.toml
crates/mutsuki-std-benchmarks/src/: main.rs
crates/mutsuki-std-effect/: Cargo.toml
crates/mutsuki-std-effect/src/: lib.rs
crates/mutsuki-std-plugins/: Cargo.toml
crates/mutsuki-std-plugins/src/: lib.rs
docs/: issue6-effect-facade.md  performance-model-issue5.md
plugins/mutsuki-plugin-config-permission/: Cargo.toml
plugins/mutsuki-plugin-config-permission/src/: lib.rs
plugins/mutsuki-plugin-db-sqlite/: Cargo.toml
plugins/mutsuki-plugin-db-sqlite/src/: lib.rs
plugins/mutsuki-plugin-dev-mock/: Cargo.toml
plugins/mutsuki-plugin-dev-mock/src/: lib.rs
plugins/mutsuki-plugin-io-browser-chromium/: Cargo.toml
plugins/mutsuki-plugin-io-browser-chromium/src/: lib.rs
plugins/mutsuki-plugin-io-fs/: Cargo.toml
plugins/mutsuki-plugin-io-fs/src/: lib.rs
plugins/mutsuki-plugin-io-http-client/: Cargo.toml
plugins/mutsuki-plugin-io-http-client/src/: lib.rs
plugins/mutsuki-plugin-observe-log/: Cargo.toml
plugins/mutsuki-plugin-observe-log/src/: lib.rs
plugins/mutsuki-plugin-resource-memory/: Cargo.toml
plugins/mutsuki-plugin-resource-memory/src/: lib.rs
plugins/mutsuki-plugin-resource-shared-memory/: Cargo.toml
plugins/mutsuki-plugin-resource-shared-memory/benches/: shared_memory_paths.rs
plugins/mutsuki-plugin-resource-shared-memory/src/: constants.rs  descriptor.rs  error.rs  lib.rs  mapping.rs  plugin.rs  provider.rs
plugins/mutsuki-plugin-resource-shared-memory/tests/: cross_process.rs  zero_copy.rs
plugins/mutsuki-plugin-workflow-broadcast/: Cargo.toml
plugins/mutsuki-plugin-workflow-broadcast/src/: lib.rs
plugins/mutsuki-plugin-workflow-linear/: Cargo.toml
plugins/mutsuki-plugin-workflow-linear/src/: lib.rs
protocols/mutsuki-protocol-browser/: Cargo.toml
protocols/mutsuki-protocol-browser/src/: lib.rs
protocols/mutsuki-protocol-config/: Cargo.toml
protocols/mutsuki-protocol-config/src/: lib.rs
protocols/mutsuki-protocol-db/: Cargo.toml
protocols/mutsuki-protocol-db/src/: lib.rs
protocols/mutsuki-protocol-dev/: Cargo.toml
protocols/mutsuki-protocol-dev/src/: lib.rs
protocols/mutsuki-protocol-fs/: Cargo.toml
protocols/mutsuki-protocol-fs/src/: lib.rs
protocols/mutsuki-protocol-http/: Cargo.toml
protocols/mutsuki-protocol-http/src/: lib.rs
protocols/mutsuki-protocol-observe/: Cargo.toml
protocols/mutsuki-protocol-observe/src/: lib.rs
protocols/mutsuki-protocol-resource/: Cargo.toml
protocols/mutsuki-protocol-resource/src/: lib.rs
protocols/mutsuki-protocol-workflow/: Cargo.toml
protocols/mutsuki-protocol-workflow/src/: lib.rs
scripts/: run-performance-model.py
skills/core-conformance/: SKILL.md
skills/io-effect-plugins/: SKILL.md
skills/protocol-surfaces/: SKILL.md
skills/resource-state-providers/: SKILL.md
skills/workflow-observe-plugins/: SKILL.md
