[workspace]
members = [
    "plugins/mutsuki-plugin-config-permission",
    "plugins/mutsuki-plugin-db-sqlite",
    "plugins/mutsuki-plugin-dev-mock",
    "plugins/mutsuki-plugin-io-fs",
    "plugins/mutsuki-plugin-io-http-client",
    "plugins/mutsuki-plugin-observe-log",
    "plugins/mutsuki-plugin-resource-memory",
    "plugins/mutsuki-plugin-resource-shared-memory",
    "plugins/mutsuki-plugin-workflow-broadcast",
    "plugins/mutsuki-plugin-workflow-linear",
    "plugins/mutsuki-plugin-io-browser-chromium",
    "protocols/mutsuki-protocol-config",
    "protocols/mutsuki-protocol-db",
    "protocols/mutsuki-protocol-dev",
    "protocols/mutsuki-protocol-fs",
    "protocols/mutsuki-protocol-http",
    "protocols/mutsuki-protocol-observe",
    "protocols/mutsuki-protocol-resource",
    "protocols/mutsuki-protocol-workflow",
    "protocols/mutsuki-protocol-browser",
    "crates/mutsuki-std-plugins",
    "crates/mutsuki-std-benchmarks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
mutsuki-runtime-contracts = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "94ba3a81d6bf4fb1263007766a64ac8be3fec1ab" }
mutsuki-runtime-core = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "94ba3a81d6bf4fb1263007766a64ac8be3fec1ab" }
mutsuki-runtime-sdk = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "94ba3a81d6bf4fb1263007766a64ac8be3fec1ab" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.23"

[profile.dev]
debug = "line-tables-only"
incremental = true
