[package]
name = "mutsuki-std-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-plugin-io-browser-chromium = { path = "../../plugins/mutsuki-plugin-io-browser-chromium" }
mutsuki-plugin-resource-memory = { path = "../../plugins/mutsuki-plugin-resource-memory" }
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core.workspace = true
mutsuki-service-runtime = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "b06e2107dc2d0887406afb89d8d4a25f9383fb2e" }
serde.workspace = true
serde_json.workspace = true
