[package]
name = "mutsuki-std-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-plugin-io-browser-chromium = { path = "../../plugins/mutsuki-plugin-io-browser-chromium" }
mutsuki-plugin-resource-memory = { path = "../../plugins/mutsuki-plugin-resource-memory" }
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core.workspace = true
mutsuki-service-runtime = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "5abf3a3f4a455a365a18f4883b81e959994d34f2" }
serde.workspace = true
serde_json.workspace = true
