[package]
name = "mutsuki-std-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-plugin-io-browser-chromium = { path = "../../plugins/mutsuki-plugin-io-browser-chromium" }
mutsuki-plugin-resource-memory = { path = "../../plugins/mutsuki-plugin-resource-memory" }
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core.workspace = true
mutsuki-service-runtime = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "6eeaba59a136261a27270ee5faebc9c1e79adbc8" }
serde.workspace = true
serde_json.workspace = true
