[package]
name = "mutsuki-plugin-io-http-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core.workspace = true
mutsuki-runtime-sdk.workspace = true
mutsuki-std-effect.workspace = true
serde_json.workspace = true
