[package]
name = "mutsuki-plugin-resource-shared-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core.workspace = true
mutsuki-runtime-sdk.workspace = true
serde_json.workspace = true
shared_memory = "0.12.4"

[[bin]]
name = "mutsuki-shared-memory-child"
path = "src/bin/mutsuki-shared-memory-child.rs"
